src/CParser2Parser.java
// Generated from CParser2.g4 by ANTLR 4.10.1
 import ast.*; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CParser2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Whitespace=1, Auto=2, Break=3, Case=4, Char=5, Const=6, Continue=7, Default=8, 
		Do=9, Double=10, Else=11, Enum=12, Extern=13, Float=14, For=15, Goto=16, 
		If=17, Inline=18, Int=19, Long=20, Register=21, Restrict=22, Return=23, 
		Short=24, Signed=25, Sizeof=26, Static=27, Struct=28, Switch=29, Typedef=30, 
		Union=31, Unsigned=32, Void=33, Volatile=34, While=35, File=36, LeftParanthesis=37, 
		RightParanthesis=38, LeftSquareBracket=39, RightSquareBracket=40, LeftBrace=41, 
		RightBrace=42, Less=43, LessEqual=44, Greater=45, GreaterEqual=46, LeftShift=47, 
		RightShift=48, Plus=49, Increment=50, Minus=51, Decrement=52, Star=53, 
		Div=54, Mod=55, BitwiseAnd=56, BitwiseOr=57, LogicalAnd=58, LogicalOr=59, 
		Xor=60, Not=61, Tilde=62, Question=63, Colon=64, Semicolon=65, Comma=66, 
		Space=67, AssignmentOperator=68, StarAssignment=69, DivAssignment=70, 
		ModAssignment=71, PlusAssignment=72, MinusAssignment=73, LeftShiftAssignment=74, 
		RightShiftAssignment=75, AndAssignment=76, XorAssignment=77, OrAssignment=78, 
		Equal=79, NotEqual=80, Arrow=81, Dot=82, Digit=83, Identifier=84, DigitSequence=85, 
		Sign=86, BinaryConstant=87, IntegerLiteral=88, OctalConstant=89, HexadecimalConstant=90, 
		CharacterConstant=91, Constant=92, EscapeSequence=93, StringLiteral=94, 
		Dir=95, Directive=96, Newline=97, LineComment=98, MultiLineComment=99;
	public static final int
		RULE_arithmeticexpression = 0, RULE_logicalorexpression = 1, RULE_logicalorexpression2 = 2, 
		RULE_logicalandexpression = 3, RULE_logicalandexpression2 = 4, RULE_inclusiveorexpression = 5, 
		RULE_inclusiveorexpression2 = 6, RULE_exclusiveorexpression = 7, RULE_exclusiveorexpression2 = 8, 
		RULE_andexpression = 9, RULE_andexpression2 = 10, RULE_equalityexpression = 11, 
		RULE_equalityexpression2 = 12, RULE_relationalexpression = 13, RULE_relationalexpression2 = 14, 
		RULE_shiftexpression = 15, RULE_shiftexpression2 = 16, RULE_additiveexpression = 17, 
		RULE_additiveexpression2 = 18, RULE_multiplicativeexpression = 19, RULE_multiplicativeexpression2 = 20, 
		RULE_unaryexpression = 21, RULE_primaryexpression = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"arithmeticexpression", "logicalorexpression", "logicalorexpression2", 
			"logicalandexpression", "logicalandexpression2", "inclusiveorexpression", 
			"inclusiveorexpression2", "exclusiveorexpression", "exclusiveorexpression2", 
			"andexpression", "andexpression2", "equalityexpression", "equalityexpression2", 
			"relationalexpression", "relationalexpression2", "shiftexpression", "shiftexpression2", 
			"additiveexpression", "additiveexpression2", "multiplicativeexpression", 
			"multiplicativeexpression2", "unaryexpression", "primaryexpression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'auto'", "'break'", "'case'", "'char'", "'const'", "'continue'", 
			"'default'", "'do'", "'double'", "'else'", "'enum'", "'extern'", "'float'", 
			"'for'", "'goto'", "'if'", "'inline'", "'int'", "'long'", "'register'", 
			"'restrict'", "'return'", "'short'", "'signed'", "'sizeof'", "'static'", 
			"'struct'", "'switch'", "'typedef'", "'union'", "'unsigned'", "'void'", 
			"'volatile'", "'while'", "'FILE'", "'('", "')'", "'['", "']'", "'{'", 
			"'}'", "'<'", "'<='", "'>'", "'>='", "'<<'", "'>>'", "'+'", "'++'", "'-'", 
			"'--'", "'*'", "'/'", "'%'", "'&'", "'|'", "'&&'", "'||'", "'^'", "'!'", 
			"'~'", "'?'", "':'", "';'", "','", "' '", "'='", "'*='", "'/='", "'%='", 
			"'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='", "'=='", "'!='", 
			"'->'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Whitespace", "Auto", "Break", "Case", "Char", "Const", "Continue", 
			"Default", "Do", "Double", "Else", "Enum", "Extern", "Float", "For", 
			"Goto", "If", "Inline", "Int", "Long", "Register", "Restrict", "Return", 
			"Short", "Signed", "Sizeof", "Static", "Struct", "Switch", "Typedef", 
			"Union", "Unsigned", "Void", "Volatile", "While", "File", "LeftParanthesis", 
			"RightParanthesis", "LeftSquareBracket", "RightSquareBracket", "LeftBrace", 
			"RightBrace", "Less", "LessEqual", "Greater", "GreaterEqual", "LeftShift", 
			"RightShift", "Plus", "Increment", "Minus", "Decrement", "Star", "Div", 
			"Mod", "BitwiseAnd", "BitwiseOr", "LogicalAnd", "LogicalOr", "Xor", "Not", 
			"Tilde", "Question", "Colon", "Semicolon", "Comma", "Space", "AssignmentOperator", 
			"StarAssignment", "DivAssignment", "ModAssignment", "PlusAssignment", 
			"MinusAssignment", "LeftShiftAssignment", "RightShiftAssignment", "AndAssignment", 
			"XorAssignment", "OrAssignment", "Equal", "NotEqual", "Arrow", "Dot", 
			"Digit", "Identifier", "DigitSequence", "Sign", "BinaryConstant", "IntegerLiteral", 
			"OctalConstant", "HexadecimalConstant", "CharacterConstant", "Constant", 
			"EscapeSequence", "StringLiteral", "Dir", "Directive", "Newline", "LineComment", 
			"MultiLineComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CParser2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CParser2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ArithmeticexpressionContext extends ParserRuleContext {
		public ASTNode node;
		public LogicalorexpressionContext t1;
		public LogicalorexpressionContext logicalorexpression() {
			return getRuleContext(LogicalorexpressionContext.class,0);
		}
		public ArithmeticexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmeticexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CParser2Listener ) ((CParser2Listener)listener).enterArithmeticexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CParser2Listener ) ((CParser2Listener)listener).exitArithmeticexpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CParser2Visitor ) return ((CParser2Visitor<? extends T>)visitor).visitArithmeticexpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArithmeticexpressionContext arithmeticexpression() throws RecognitionException {
		ArithmeticexpressionContext _localctx = new ArithmeticexpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_arithmeticexpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			((ArithmeticexpressionContext)_localctx).t1 = logicalorexpression();
			((ArithmeticexpressionContext)_localctx).node =  ((ArithmeticexpressionContext)_localctx).t1.node; _localctx.node.print();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalorexpressionContext extends ParserRuleContext {
		public ASTNode node;
		public LogicalandexpressionContext t1;
		public Logicalorexpression2Context t2;
		public LogicalandexpressionContext logicalandexpression() {
			return getRuleContext(LogicalandexpressionContext.class,0);
		}
		public Logicalorexpression2Context logicalorexpression2() {
			return getRuleContext(Logicalorexpression2Context.class,0);
		}
		public LogicalorexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalorexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CParser2Listener ) ((CParser2Listener)listener).enterLogicalorexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CParser2Listener ) ((CParser2Listener)listener).exitLogicalorexpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CParser2Visitor ) return ((CParser2Visitor<? extends T>)visitor).visitLogicalorexpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicalorexpressionContext logicalorexpression() throws RecognitionException {
		LogicalorexpressionContext _localctx = new LogicalorexpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_logicalorexpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			((LogicalorexpressionContext)_localctx).t1 = logicalandexpression();
			((LogicalorexpressionContext)_localctx).node =  ((LogicalorexpressionContext)_localctx).t1.node;
			setState(51);
			((LogicalorexpressionContext)_localctx).t2 = logicalorexpression2();
			((LogicalorexpressionContext)_localctx).node =  (((LogicalorexpressionContext)_localctx).t2.node != null)? new LogicalOrExp(_localctx.node,((LogicalorexpressionContext)_localctx).t2.node) : _localctx.node ;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logicalorexpression2Context extends ParserRuleContext {
		public ASTNode node;
		public LogicalorexpressionContext t1;
		public TerminalNode LogicalOr() { return getToken(CParser2Parser.LogicalOr, 0); }
		public LogicalorexpressionContext logicalorexpression() {
			return getRuleContext(LogicalorexpressionContext.class,0);
		}
		public Logicalorexpression2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalorexpression2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CParser2Listener ) ((CParser2Listener)listener).enterLogicalorexpression2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CParser2Listener ) ((CParser2Listener)listener).exitLogicalorexpression2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CParser2Visitor ) return ((CParser2Visitor<? extends T>)visitor).visitLogicalorexpression2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logicalorexpression2Context logicalorexpression2() throws RecognitionException {
		Logicalorexpression2Context _localctx = new Logicalorexpression2Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_logicalorexpression2);
		try {
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LogicalOr:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				match(LogicalOr);
				setState(55);
				((Logicalorexpression2Context)_localctx).t1 = logicalorexpression();
				((Logicalorexpression2Context)_localctx).node =  new LogicalOr(((Logicalorexpression2Context)_localctx).t1.node);
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalandexpressionContext extends ParserRuleContext {
		public ASTNode node;
		public InclusiveorexpressionContext t1;
		public Logicalandexpression2Context t2;
		public InclusiveorexpressionContext inclusiveorexpression() {
			return getRuleContext(InclusiveorexpressionContext.class,0);
		}
		public Logicalandexpression2Context logicalandexpression2() {
			return getRuleContext(Logicalandexpression2Context.class,0);
		}
		public LogicalandexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalandexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CParser2Listener ) ((CParser2Listener)listener).enterLogicalandexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CParser2Listener ) ((CParser2Listener)listener).exitLogicalandexpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CParser2Visitor ) return ((CParser2Visitor<? extends T>)visitor).visitLogicalandexpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicalandexpressionContext logicalandexpression() throws RecognitionException {
		LogicalandexpressionContext _localctx = new LogicalandexpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_logicalandexpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			((LogicalandexpressionContext)_localctx).t1 = inclusiveorexpression();
			((LogicalandexpressionContext)_localctx).node =  ((LogicalandexpressionContext)_localctx).t1.node;
			setState(63);
			((LogicalandexpressionContext)_localctx).t2 = logicalandexpression2();
			((LogicalandexpressionContext)_localctx).node =  (((LogicalandexpressionContext)_localctx).t2.node != null)? new LogicalAndExp(_localctx.node,((LogicalandexpressionContext)_localctx).t2.node) : _localctx.node;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logicalandexpression2Context extends ParserRuleContext {
		public ASTNode node;
		public LogicalandexpressionContext t1;
		public TerminalNode LogicalAnd() { return getToken(CParser2Parser.LogicalAnd, 0); }
		public LogicalandexpressionContext logicalandexpression() {
			return getRuleContext(LogicalandexpressionContext.class,0);
		}
		public Logicalandexpression2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalandexpression2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CParser2Listener ) ((CParser2Listener)listener).enterLogicalandexpression2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CParser2Listener ) ((CParser2Listener)listener).exitLogicalandexpression2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CParser2Visitor ) return ((CParser2Visitor<? extends T>)visitor).visitLogicalandexpression2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logicalandexpression2Context logicalandexpression2() throws RecognitionException {
		Logicalandexpression2Context _localctx = new Logicalandexpression2Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_logicalandexpression2);
		try {
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LogicalAnd:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				match(LogicalAnd);
				setState(67);
				((Logicalandexpression2Context)_localctx).t1 = logicalandexpression();
				((Logicalandexpression2Context)_localctx).node =  new LogicalAnd(((Logicalandexpression2Context)_localctx).t1.node);
				}
				break;
			case EOF:
			case LogicalOr:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
